--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "p5": "^0.6.0",
     "p5.serialserver": "0.0.25",
-    "prettier": "^1.12.1"
+    "prettier": "^1.12.1",
+    "socket.io": "^2.1.0"
   }
 }
