--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "jquery": "^3.3.1",
     "p5": "^0.6.0",
     "p5.serialserver": "0.0.25",
     "prettier": "^1.12.1",
